--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/heatmap.css">
   </head>
   <body>
-    <div class="grey0 center padding flex">
+    <header class="grey0 center padding flex">
       <div class="flex1 grey1 padding"></div>
       <div class="flex1 grey1 padding"></div>
       <div class="flex1 grey1 padding">
@@ -14,101 +14,103 @@
       </div>
       <div class="flex1 grey1 padding"></div >
       <div class="flex1 grey1 padding"></div>
-    </div>
-    <div class="grid-2-col">
-      <div id="main-title"></div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding"></div>
+    </header>
+    <main>
+      <div class="grid-2-col">
+        <div id="main-title"></div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding"></div>
+        </div >
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding"></div>
+        </div>
       </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding"></div>
-      </div >
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding"></div>
-      </div>
-    </div>
-    <div class="grey1 padding">
-      <div class="grey2 padding title"></div>
-      <div class="grey2 padding p"></div>
-    </div>
-    <div class="grid-3-col">
-      <div class="grey1 padding border">
+      <div class="grey1 padding">
         <div class="grey2 padding title"></div>
         <div class="grey2 padding p"></div>
       </div>
-      <div class="grey1 padding border">
+      <div class="grid-3-col">
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div >
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+      </div>
+      <div class="grey1 padding">
         <div class="grey2 padding title"></div>
         <div class="grey2 padding p"></div>
       </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div >
-      <div class="grey1 padding border">
+      <div class="grid-3-col">
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div >
+        </div>
+      </div>
+      <div class="grid-2-col grey0 padding">
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+        <div class="grey1 padding border">
+          <div class="grey2 padding title"></div>
+          <div class="grey2 padding p"></div>
+        </div>
+      </div>
+      <div class="grey1 padding">
         <div class="grey2 padding title"></div>
         <div class="grey2 padding p"></div>
       </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-    </div>
-    <div class="grey1 padding">
-      <div class="grey2 padding title"></div>
-      <div class="grey2 padding p"></div>
-    </div>
-    <div class="grid-3-col">
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div >
-      </div>
-    </div>
-    <div class="grid-2-col grey0 padding">
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-      <div class="grey1 padding border">
-        <div class="grey2 padding title"></div>
-        <div class="grey2 padding p"></div>
-      </div>
-    </div>
-    <div class="grey1 padding">
-      <div class="grey2 padding title"></div>
-      <div class="grey2 padding p"></div>
-    </div>
+    </main>
     <footer class="grey0 padding">
       <div class="grey2 padding title center"></div>
     </footer>
