--- a/index.html
+++ b/index.html
@@ -18,92 +18,92 @@
     <main>
       <div class="grid-2-col">
         <div id="main-title"></div>
-        <div class="grey1 padding border">
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding"></div>
-        </div >
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding"></div>
-        </div>
+        </article>
       </div>
       <div class="grey1 padding">
         <div class="grey2 padding title"></div>
         <div class="grey2 padding p"></div>
       </div>
       <div class="grid-3-col">
-        <div class="grey1 padding border">
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div >
-        <div class="grey1 padding border">
+        </article >
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
+        </article>
       </div>
       <div class="grey1 padding">
         <div class="grey2 padding title"></div>
         <div class="grey2 padding p"></div>
       </div>
       <div class="grid-3-col">
-        <div class="grey1 padding border">
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div >
+        </article >
       </div>
       <div class="grid-2-col grey0 padding">
-        <div class="grey1 padding border">
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
-        <div class="grey1 padding border">
+        </article>
+        <article class="grey1 padding border">
           <div class="grey2 padding title"></div>
           <div class="grey2 padding p"></div>
-        </div>
+        </article>
       </div>
       <div class="grey1 padding">
         <div class="grey2 padding title"></div>
